# tencentproject

./: CMakeLists.txt  README.md  Readme.md  build_server.sh
client/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake
client/include/: big_file.h  clienthandler.h  small_file.h  tcp.h
client/src/: big_file_download.cc  big_file_upload.cc  client.cpp  small_file_download.cc  small_file_upload.cc  tcp.cpp  test.cpp
client/upload/: 10k
client/utils/: tcp_socket.hpp
etc/: config.h  readme.md
proxy-client/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  readme.txt
proxy-client/doc/: changelog.txt
proxy-client/etc/: config.hpp
proxy-client/include/: ev_epoll.h  fd.h  protocol.h  task.h  worker.h
proxy-client/src/: ev_epoll.cpp  fd.cpp  myproxy.cpp  protocol.cpp  worker.cpp
proxy-server/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  cmake_install.cmake  data
proxy-server/doc/: changelog.txt
proxy-server/etc/: config.hpp
proxy-server/src/: ev_epoll.cpp  fd.cpp  myproxy.cpp  protocol.cpp  task.cpp  thread.cpp  worker.cpp
server/: .gitignore  readme.md
server/include/: helper.h  jobs.h  md5.h  readme.md  tcp.h  worker.h
server/src/: helper.cpp  jobs.cpp  md5.cpp  readme.md  server.cpp  tcp.cpp  worker.cpp
